--- a/css/styleSheet.css
+++ b/css/styleSheet.css
@@ -1,6 +1,14 @@
+@import url(http://fonts.googleapis.com/css?family=Ovo|Sanchez);
 h1{
-	font-family: sans-serif;
+	font-family: Ovo;
 	font-size: 300%;
+	margin-left: .5%;
+	color: white;
+	line-height: 50%;
+}
+h2{
+	font-family: Ovo;
+	font-size: 200%;
 	margin-left: .5%;
 	color: white;
 	line-height: 50%;
@@ -10,4 +18,10 @@ body{
 }
 .me{
 	margin-left: 3%;
+}
+p{
+	margin-left: 2%;
+	font-family: Sanchez;
+	font-size: 125%;
+	color: beige;
 }
